Add_Task screen  [ 50% ]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ScheduleData" />
-        <activity android:name=".AddTask" />
-        <activity android:name=".AddMark"></activity>
+        <activity android:name=".AddMark" />
+        <activity android:name=".AddTask"></activity>
     </application>
 
 </manifest>
