--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         </activity>
         <activity android:name=".ScheduleData" />
         <activity android:name=".AddMark" />
-        <activity android:name=".AddTask"></activity>
+        <activity android:name=".AddTask" />
+        <activity android:name=".AddSubject" />
+        <activity android:name=".AddExam"></activity>
     </application>
 
 </manifest>
