Add alarm to Reminder   [ done ]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".AddTask" />
         <activity android:name=".AddSubject" />
         <activity android:name=".AddExam"></activity>
+
+        <receiver android:name=".AlarmBroadcastReceiver" />
     </application>
 
 </manifest>
