--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,21 +5,23 @@
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
 
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher_2"
+        android:label="Study Scheduler"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
-        </activity>
+
+
+
+
         <activity android:name=".ScheduleData" />
         <activity android:name=".AddMark" />
         <activity android:name=".AddTask" />
         <activity android:name=".AddSubject" />
         <activity android:name=".AddExam" />
 
-        <receiver android:name=".AlarmBroadcastReceiver" />
 
         <activity
             android:name="com.example.kunal.ShowSubject"
@@ -46,7 +48,7 @@
 
         <activity
             android:name=".HomeActivity"
-            android:label="@string/title_activity_home"
+            android:label="Study Scheduler"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -58,6 +60,7 @@
 
 
 
+        <receiver android:process=":remote" android:name=".AlarmBroadcastReceiver" />
     </application>
 
 </manifest>
